# C-Address-Onboarding-Bridge-Backend

./: .env.example  .env.local.example  .gitignore  Dockerfile.dev  README.md  docker-compose.chaos.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  stryker.config.json
.github/: dependabot.yml
.github/workflows/: backup-testing.yml  benchmark.yml  chaos.yml  ci.yml  container-security.yml  deploy.yml  environment-status.yml  fuzz.yml  rollback.yml  secrets-rotation.yml  security.yml  testnet.yml  tests.yml
.husky/: pre-commit
api/: package.json
api/scripts/: generate-api-reference.ts  migrate.ts
api/src/: circuit-breaker.ts  config.ts  index.ts  logger.ts  shutdown.ts
api/tests/: chaos.test.ts  performance.k6.js  webhook.sim.test.ts
contracts/onboarding-bridge/: UPGRADE.md
contracts/onboarding-bridge/fuzz/: Cargo.toml  README.md
contracts/onboarding-bridge/fuzz/src/: fuzz_admin_ops.rs  fuzz_fee_calculation.rs  fuzz_fund_sequence.rs
docs/: developer-setup.md  disaster-recovery.md  secrets-management.md  troubleshooting.md  wallet-integration.md
docs/adr/: README.md  adr-001-use-soroban-for-smart-contract-execution.md  adr-002-stateless-api-server-with-no-database.md  adr-003-fee-model-with-basis-points.md  template.md  (+5 more)
infrastructure/: main.tf  variables.tf
scripts/: backup-db.sh  deploy.sh  secrets.mjs  setup-dev.sh  smoke-test.sh  test-restore.sh  verify-backup.sh
sdk/: README.md  package.json  tsconfig.esm.json  tsconfig.json  tsconfig.umd.json  vitest.config.ts  vitest.integration.config.ts
(+146 files in other folders)
